<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="network_fail">网络异常</string>

    <!--账户模块-->
    <string name="account">账号</string>
    <string name="register">注册</string>
    <string name="register_tip">没有账号,去注册</string>
    <string name="already_account_tip">已有账号? 去登录</string>
    <!--账户模块-->

    <string name="lost_and_found">失物招领</string>
    <string name="search_for_notices">寻物启事</string>
    <string name="news">最新动态</string>
    <string name="test_time">2018-11-28</string>
    <string name="test_description">描述按实际滴哦千万吨级哦请问建瓯请问大家请问将启动去都叫我大家去大家轻拍描述按实际滴哦千万吨级哦请问建瓯请问大家请问将启动去都叫我大家去大家轻拍</string>


    <string name="place">地点</string>

    <string name="test_category">失物招领</string>
    <string name="goods_name">物品名称</string>
    <string name="goods_description">物品描述</string>
    <string name="lose_place">丢失地点</string>
    <string name="goods_reward">(选填)报酬</string>
    <string name="goods_image">请选择物品图片</string>
    <string name="seek_place">拾到地点</string>
    <string name="album">相册</string>
    <string name="take_picture">拍照</string>
    <string name="goods_tips">信息不完整,请输入完整信息~</string>
    <string name="goods_file_empty">物品图片不能未空</string>
    <string name="publish_count">发布数量</string>
    <string name="zero">0</string>
    <string name="follow_count">关注数量</string>

    <!--关于我-->
    <string name="about">关于我</string>
    <string name="setting">设置</string>
    <string name="github">Github: https://github.com/hyzhan43</string>
    <string name="csdn">CSDN: https://blog.csdn.net/weixin_40595516</string>
    <string name="email">邮箱：hyzhan43@163.com</string>
    <!--关于我-->


    <string name="publish_success">发布成功</string>
    <string name="goods_detail">物品详情</string>
    <string name="goods_originator">发布者</string>
    <string name="goods_time">发布时间</string>
    <string name="reward">报酬</string>

    <!--搜索模块-->
    <string name="search_tips">请输入搜索物品</string>
    <string name="history">历史记录</string>
    <string name="clear_history">清空历史记录</string>
    <string name="follow_suc">关注成功</string>
    <string name="unfollow_suc">取消关注成功</string>
    <string name="my_publish">我的发布</string>
    <string name="my_follow">我的关注</string>
    <string name="register_suc">注册成功</string>
    <string name="logout">退出登录</string>
    <string name="my_finish">我完成的</string>
    <string name="my_cancel">我取消的</string>
    <string name="my_delete">我删除的</string>
    <string name="nickname">请输入昵称</string>
    <!--搜索模块-->
</resources>