<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/len_20"
            app:cardCornerRadius="@dimen/len_8"
            app:cardElevation="@dimen/len_4">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/len_20">

                <ImageView
                    android:id="@+id/iv_goods"
                    android:layout_width="@dimen/len_128"
                    android:layout_height="@dimen/len_128"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_follow"
                    android:layout_width="@dimen/len_32"
                    android:layout_height="@dimen/len_32"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_follow"
                    app:layout_constraintRight_toRightOf="parent" />

                <Button
                    android:id="@+id/btn_type"
                    android:layout_width="@dimen/len_64"
                    android:layout_height="@dimen/len_28"
                    android:layout_marginTop="@dimen/len_10"
                    android:background="@drawable/green_round_bg"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_12"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_goods" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/goods_name"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_type" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/app_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_type" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/phone"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textIsSelectable="true"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/place"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/place"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/goods_originator"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_place" />

                <TextView
                    android:id="@+id/tv_originator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/goods_originator"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_place" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/goods_time"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_originator" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/app_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_originator" />

                <TextView
                    android:id="@+id/tv_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/goods_description"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_time" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/test_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

                <TextView
                    android:id="@+id/tv_reward_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/reward"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />

                <TextView
                    android:id="@+id/tv_reward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_10"
                    android:text="@string/app_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_reward_title" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>