<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/len_20"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/len_20">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_portrait"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/len_20"
                android:src="@drawable/ic_logo"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/len_10"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/civ_portrait" />

            <TextView
                android:id="@+id/tv_publish_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/font_28"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_follow"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_count"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_follow"
                app:layout_constraintTop_toBottomOf="@+id/tv_publish_count" />

            <TextView
                android:id="@+id/tv_follow_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/font_28"
                app:layout_constraintLeft_toRightOf="@+id/tv_publish"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_count"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@+id/tv_publish"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_follow_count" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_my_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/len_10">

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_finish" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/len_10"
                    android:layout_weight="1"
                    android:text="@string/my_publish" />

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:layout_marginEnd="@dimen/len_10"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/len_10">

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_finish" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/len_10"
                    android:layout_weight="1"
                    android:text="@string/my_already_found" />

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:layout_marginEnd="@dimen/len_10"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_my_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/len_10">

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_follow" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/len_10"
                    android:layout_weight="1"
                    android:text="@string/my_follow" />

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:layout_marginEnd="@dimen/len_10"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_10"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/len_10">

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_claw" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/len_10"
                    android:layout_weight="1"
                    android:text="@string/about" />

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:layout_marginEnd="@dimen/len_10"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/len_10">

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_setting" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/len_10"
                    android:layout_weight="1"
                    android:text="@string/setting" />

                <ImageView
                    android:layout_width="@dimen/len_24"
                    android:layout_height="@dimen/len_24"
                    android:layout_marginEnd="@dimen/len_10"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_right_arrow" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_20"
                android:layout_marginBottom="@dimen/len_20"
                android:background="@drawable/ripple_bg"
                android:gravity="center"
                android:padding="@dimen/len_10"
                android:text="@string/logout"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>