<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/len_10"
    app:cardElevation="@dimen/len_4">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/len_10">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_portrait"
            android:layout_width="@dimen/len_32"
            android:layout_height="@dimen/len_32"
            android:src="@color/green_200"
            app:layout_constraintBottom_toBottomOf="@+id/btn_type"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/civ_portrait"
            app:layout_constraintLeft_toRightOf="@+id/civ_portrait"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_goods"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/len_10"
            android:contentDescription="@string/app_name"
            android:src="@color/green_200"
            app:layout_constraintTop_toBottomOf="@+id/civ_portrait" />

        <Button
            android:id="@+id/btn_type"
            android:layout_width="@dimen/len_64"
            android:layout_height="@dimen/len_28"
            android:background="@color/colorPrimary"
            android:text="@string/test_category"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:text="@string/app_name"
            app:layout_constraintLeft_toRightOf="@+id/iv_goods"
            app:layout_constraintTop_toTopOf="@+id/iv_goods" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:layout_marginTop="@dimen/len_4"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/test_description"
            app:layout_constraintLeft_toRightOf="@+id/iv_goods"
            app:layout_constraintTop_toBottomOf="@+id/tv_goods_name"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:text="@string/test_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_goods" />

        <ImageView
            android:id="@+id/iv_follow"
            android:layout_width="@dimen/len_20"
            android:layout_height="@dimen/len_20"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_follow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_time" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>